plugins {
    id 'java-library'
}

allprojects {
    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release.set(21)
        // Enable preview features for Panama API and Virtual Threads if needed
        options.compilerArgs += ['--enable-preview']
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs += ['--enable-preview']
    }
}
